a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Fan_Jin/invalidwhile.min
# This program is invalid as the predicate for iteration can only be of type int

var x: float;

while x do

done

